--- a/start/index.html
+++ b/start/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/x-icon" href="https://www.favicon.cc/logo3d/476880.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script src="https://kit.fontawesome.com/1d16c05dfb.js" crossorigin="anonymous"></script>
   <title>Lifecyle</title>
 </head>
 
